# repo-lib2

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: plugin.cpp  plugin.h  plugin_info.h  version.h.in
tests/: test_config.h  test_main.cpp
